--- a/css/events.css
+++ b/css/events.css
@@ -13,12 +13,15 @@
 }
 .nav-brand
 {
-    margin-right: 700px;
+    padding-right: 800px;
+    padding-left: 200px;
 }
-.row
+
+.img1
 {
-    margin-top: 120px;
+    float: left;
 }
+
 .column {
     float: left;
     width: 50%;
@@ -67,6 +70,21 @@
   }
   .event
   {
-      height: 400px;
+      height: 250px;
+      background-color:grey;
     
+  }
+  
+  .col-xs-12 
+  {
+      background-color: grey; 
+    width: 100%; }
+
+  .col-sm-4
+  {
+      background-color: grey;
+  }    
+  .person
+  {
+      background-color: grey;
   }
